@@ -1,0 +1,11 @@
+package com.skullmangames.biohazard.item;
+
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemGroup;
+
+public class RedHerb extends Item
+{
+    public RedHerb() {
+        super(new Item.Properties().group(ItemGroup.FOOD));
+    }
+}
