@@ -1,0 +1,19 @@
+{
+  "type": "minecraft:crafting_shaped",
+  "pattern":
+  [
+    "xx"
+  ],
+  "key":
+  {
+    "x":
+    {
+      "item": "biohazard:green_herb"
+    }
+  },
+  "result":
+  {
+    "item": "biohazard:mixed_herbs_gg",
+    "count": 1
+  }
+}
