@@ -1,5 +1,9 @@
 Build: 1.16.3-0.1.0
 
 	-New Item added: Green Herb
+	-New Item added: Red Herb
+	-New Item added: Blue Herb
+	-New Item added: Mixed Herbs (G+G)
+	-New Item added: Mixed Herbs (G+G+G)
 
 =========
